--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,15 +18,19 @@ body {
   margin-top: 50px;
 }
 
-
-
 main {
   padding: 1rem 10vw;
 }
 
-h1 { font-size: 2rem; }
-h2 { font-size: 1.5rem; }
-h2 { font-size: 1.25rem; }
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h2 {
+  font-size: 1.25rem;
+}
 
 a {
   color: inherit;
@@ -38,10 +42,12 @@ a {
   box-sizing: border-box;
 }
 
-img {max-width: 100%;}
+img {
+  max-width: 100%;
+}
 
-input { 
-  display: inline-block; 
+input {
+  display: inline-block;
   outline: none;
   border: none;
   font-size: 1.5rem;
@@ -58,6 +64,8 @@ fieldset {
 code {
   overflow-x: scroll;
 }
+
+/* Navbar */
 
 .navbar {
   height: 70px;
@@ -91,12 +99,12 @@ code {
 
 .navbar li {
   border-radius: 50%;
-  
 }
 
 /* Buttons */
 
-.btn, button {
+.btn,
+button {
   background-color: var(--color-gray);
   border: none;
   color: var(--color-text);
@@ -120,13 +128,12 @@ code {
   }
 }
 
-
 button:hover {
   filter: brightness(90%);
 }
 
 button:disabled,
-button[disabled]{
+button[disabled] {
   filter: brightness(80%);
   cursor: not-allowed;
 }
@@ -179,9 +186,9 @@ button.btn-logo {
 }
 
 .card-img-center {
-  width:20%;
-  display:block;
-  margin:auto;
+  width: 20%;
+  display: block;
+  margin: auto;
   border-radius: 50%;
   max-width: 150px;
 }
@@ -194,8 +201,8 @@ button.btn-logo {
 /* Loader */
 
 .loader {
-  border: 10px solid var(--color-bg); 
-  border-top: 10px solid var(--color-blue); 
+  border: 10px solid var(--color-bg);
+  border-top: 10px solid var(--color-blue);
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -203,22 +210,26 @@ button.btn-logo {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* File uploads */
 
-input[type="file"] {
+input[type='file'] {
   display: none;
 }
 
 .upload-snippet {
   width: 75%;
-    margin-left: auto;
-    background: white;
-    padding: 5px;
-    margin: 5px 0;
+  margin-left: auto;
+  background: white;
+  padding: 5px;
+  margin: 5px 0;
 }
 /* Utilities */
 
@@ -257,4 +268,6 @@ input[type="file"] {
   text-align: center;
 }
 
-.hidden { display:  none; }
+.hidden {
+  display: none;
+}
